# RECORD-MANAGEMENT-SYSTEM

./: README.md
RecordManagementSystem/: CMakeLists.txt  books.csv
RecordManagementSystem/src/: Book.cpp  Book.h  FileStorage.cpp  FileStorage.h  IStorage.h  Menu.cpp  Menu.h  RecordManager.cpp  RecordManager.h  Utils.h  main.cpp
